Zombono
Release Notes
Version 0.04-pre4
January XX, 2024
* Fix TDM end screen not displaying.
* Push zombies away if they hit a player while being spawned. This should prevent players from being trapped by zombies.
* Reset the state of all active UIs on connect and disconnect (should at least mitigate "stuck UI" bugs)

Version 0.04-pre3
January 14, 2024
* Began designing textures for z_tdm_labrats
* Added total player and director scores to leaderboard UI
* Removed old scoreboard from Quake2
* Leaderboard now updates in real time
* You don't have to press tab to hide the leaderboard anymore, it just hides itself when you stop holding tab
* Rewrote how screenshot function generates filenames. Therefore, it doesn't check for the existence of 100 files by fopen()-ing them every single time you take a screenshot, and you can now take more than 100 screenshots. It also now puts the date in the filename as a way to differentiate screenshots from each other.
* Removed vulkan renderer for now (don't have scope or ability to maintain both renderers, and I have plans to write a GL3 renderer)
* Fixed zombie animations, changed zombie speed a bit.
* Ported particle engine to 32-bit colour
* Changed conback and made a 16*9 widescreen conback.
* Better integrated new UI -you won't slide around anymore, and you still can't input commands to the player while a UI is active.
* Changed zombies to be a green colour.
* Fixed zombie gibs - they were pointing to the wrong model path, and those models were pointing to the wrong textures.
* Default intensity convar value changed from 2 to 1.2. Is it too dark?
* Fixed fullscreen mode. As a result of this, the resolution you select in settings will now actually correspond to the resolution that is set.
* Changed icons.
* Frags actually show correctly in leaderboard.