@@ -1,7 +1,0 @@
-to remove:
-
-netmen*.lmp
-dim_modm.lmp
-dim_drct.lmp
-dim_ipx.lmp
-dim_tcp.lmp
