@@ -1,11 +1,12 @@
 set game zombono
 set maxclients 25
-set hostname "Zombono Playtest - 14 Jan 2024"
+set hostname "Zombono Playtest - 21 Jan 2024"
 set public 1
 set fraglimit 75
 // NOTE: this is in minutes
 //set timelimit 15 
 set gameflags 16
+set sv_maplist "z_tdm_labrats z_tdm_subway"
 
 map z_tdm_labrats
 
